# Mnemonic-Vault

./: .gitignore  Cargo.toml  README.md
benches/: vault_bench.rs
docs/: notes  sequence-diagram  state-diagram
examples/: main.rs
src/: crypto.rs  encryption.rs  lib.rs  main.rs  utils.rs  vault_encryptor.rs
