[package]
name = "secure-mnemonic-vault"
version = "0.1.0"
edition = "2021"
authors = ["Dimas Tri Mustakim <tridims31@gmail.com"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.86"
digest = "0.10.7"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sha2 = "0.10.8"
uuid = "1.8.0"
